--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ cffi==1.15.0
 charset-normalizer==2.0.7
 click==7.1.2
 colorama==0.4.4
+cycler==0.11.0
 debugpy==1.5.0
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+fonttools==4.28.5
 gitdb==4.0.7
 GitPython==3.1.24
 idna==3.3
@@ -30,7 +32,9 @@ jupyter-client==7.0.6
 jupyter-core==4.8.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
 nbclient==0.5.4
@@ -56,6 +60,7 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.3
+pywinpty==1.1.4
 pyzmq==22.3.0
 requests==2.26.0
 Send2Trash==1.8.0
