--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ ipykernel==6.4.1
 ipython==7.28.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
+japanize-matplotlib==1.1.3
 jedi==0.18.0
 Jinja2==3.0.2
 jsonschema==4.1.0
@@ -60,6 +61,8 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.3
+pywin32==302
+pywinpty==1.1.4
 pyzmq==22.3.0
 requests==2.26.0
 Send2Trash==1.8.0
