--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ debugpy==1.5.0
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+et-xmlfile==1.1.0
 fonttools==4.28.5
 gitdb==4.0.7
 GitPython==3.1.24
@@ -44,6 +45,7 @@ nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.4
 numpy==1.21.2
+openpyxl==3.0.9
 packaging==21.0
 pandas==1.3.3
 pandocfilters==1.5.0
